FINALLY fixed overflow literally with padding....

--- a/styles/style.css
+++ b/styles/style.css
@@ -10,7 +10,6 @@
 body {
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
-  overflow: hidden;
 }
 img,
 picture,
@@ -86,11 +85,7 @@ h6 {
 /* FULL PAGE STYLING */
 body {
   font-size: 1.2vw;
-}
-
-.empty-padding {
-  width: 100%;
-  height: 400px;
+  overflow:clip;
 }
 
 .body-container {
@@ -123,22 +118,26 @@ main {
 }
 
 .left-wrapper {
-  padding: 1em 0.5em 1em 1em;
+  padding: 1em 0.5em 5em 1em;
   display: flex;
   flex-direction: column;
   align-items: left;
   overflow-y: scroll;
   text-align: justify;
-  height:100vh;
+  min-height:100%;
+  scrollbar-width: thin; /* Firefox */
+  scrollbar-color: transparent transparent; /* Firefox */
 }
 
 .right-wrapper {
-  padding: 1em 1em 1em 0.5em;
+  padding: 1em 1em 5em 0.5em;
   display: flex;
   flex-direction: column;
   overflow-y: scroll;
   text-align: justify;
-  height:100vh;
+  min-height:100%;
+   scrollbar-width: thin; /* Firefox */
+  scrollbar-color: transparent transparent; /* Firefox */
 }
 
 .blog-feed {
@@ -279,24 +278,12 @@ footer {
 
 
 /* TESTZONE */
-
- /* Hide scrollbar for Chrome, Safari and Opera */
 .left-wrapper::-webkit-scrollbar {
-  display: none;
+  width: 0px;
+  background: transparent;
 }
-
-/* Hide scrollbar for IE, Edge and Firefox */
-.left-wrapper {
-  -ms-overflow-style: none;  /* IE and Edge */
-  scrollbar-width: none;  /* Firefox */
-} 
 
 .right-wrapper::-webkit-scrollbar {
-  display: none;
-}
-
-/* Hide scrollbar for IE, Edge and Firefox */
-.right-wrapper {
-  -ms-overflow-style: none;  /* IE and Edge */
-  scrollbar-width: none;  /* Firefox */
+  width: 0px;
+  background: transparent;
 }
